# Imperium-

./: .gitattributes  .gitignore  AGENTS.md  README.md  START_HERE.md  imperium.example.toml  pyproject.toml
ARTIFACTS/: ARTIFACT_ROUTING_POLICY.md  GENERATED_EXTRACT_CHECKS_INDEX.md  INDEX.csv
ASSETS/: ASSET_MANIFEST.json  OWNER_VISUAL_PREFERENCES.md  README_ASSETS.md
CURRENT_STATE/: ADDRESS_REPAIR_REPORT_20260514.md  ARC5_PREFIRE_CURRENT_TRUTH_20260513.json  BUNDLE_ROUTE_FIX_20260513_REPORT.md  DO_NOT_DO.md  EXTERNAL_CONTEXT_INDEX_20260514.json  EXTERNAL_CONTEXT_INDEX_20260514.md  GIT_PUBLIC_STATE.json  LAST_POINT_STATE.json  LOCAL_ONLY_SOURCES_INDEX.json  LOCAL_ONLY_SOURCES_INDEX.md  NEXT_ATOMIC_STEP.md  OWNER_ASSET_REGISTRATION_STEP7_2_REPORT_20260513.md  OWNER_DECISION_LOG.md  REPO_PARITY_EXTERNALIZATION_V0_2_20260513_REPORT.md  SANCTUM_DASHBOARD_V0_5_REPORT_20260513.md  SANCTUM_V0_4_VISUAL_PROTOTYPE_REPORT_20260513.md  SAN_CLEANING_ENTRY_20260513_REPORT.md  VISUAL_FACTORY_MINIMUM_STEP7_1_REPORT_20260513.md
DOCS/: ACT3_ADDRESS_TRUTH_CAPABILITY_SPINE_SEED_20260513.md  ACT4_FULL_REGISTRATION_CORRIDOR_SEED_20260513.md  ACT4_INQUISITION_GENERAL_TASK_DECOMPOSITION_20260513.md  ACT5_PREFIRE_ADVISORY_INGEST_AND_MODERNIZATION_V0_1.md  ACT5_PREFIRE_WARNING_BUDGET_V0_1.md  ADMINISTRATUM_OPERATIONAL_AUTHORITY.md  ADMINISTRATUM_WORK_PACKET_MODEL.md  AGENT_NAVIGATION_AND_REPO_BOUNDARY_V0_1.md  ANALYZER_RUNTIME_POLICY.md  ARC5_PREFIRE_SYNTHESIS_AND_CURRENT_TRUTH_REFRESH_V0_1.md  ASTRONOMICON_TASK_PIPELINE.md  BUNDLE_AND_RECEIPT_CONTRACT_V0_1.md  BUNDLE_ROUTE_POLICY_V0_1.md  (+28 more)
(+8569 files in other folders)
