[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imperium"
version = "0.1.0"
description = "IMPERIUM verification spine v0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "jsonschema>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
